--- a/front_gateway/uwsgi.ini
+++ b/front_gateway/uwsgi.ini
@@ -7,9 +7,9 @@ http = :8000
 chdir = /app/
 
 # Django's wsgi file
-module = gateway.wsgi:get_wsgi_application()
+module = front_gateway.wsgi:get_wsgi_application()
 
-env = DJANGO_SETTINGS_MODULE=gateway.settings
+env = DJANGO_SETTINGS_MODULE=front_gateway.settings
 
 # process-related settings# maste
 master = true
