--- a/k8s/bangkok-deployment.yml
+++ b/k8s/bangkok-deployment.yml
@@ -1,3 +1,16 @@
+apiVersion: v1
+kind: Service
+metadata:
+  name: bangkok
+  labels:
+    name: bangkok
+spec:
+  selector:
+    name: bangkok
+  ports:
+   - port: 8000
+     targetPort: 8000
+---
 apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
