--- a/k8s/front-gateway-deployment.yml
+++ b/k8s/front-gateway-deployment.yml
@@ -1,3 +1,20 @@
+apiVersion: v1
+kind: Service
+metadata:
+  name: front-gateway
+  labels:
+    name: front-gateway
+spec:
+  selector:
+    name: front-gateway
+  type: NodePort
+  ports:
+   - port: 8000
+     name: http
+     targetPort: 8000
+     protocol: TCP
+     nodePort: 32500
+---
 apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
