--- a/k8s/munich-deployment.yml
+++ b/k8s/munich-deployment.yml
@@ -1,3 +1,16 @@
+apiVersion: v1
+kind: Service
+metadata:
+  name: munich
+  labels:
+    name: munich
+spec:
+  selector:
+    name: munich
+  ports:
+   - port: 8000
+     targetPort: 8000
+---
 apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
