--- a/k8s/nyc-deployment.yml
+++ b/k8s/nyc-deployment.yml
@@ -1,3 +1,16 @@
+apiVersion: v1
+kind: Service
+metadata:
+  name: nyc
+  labels:
+    name: nyc
+spec:
+  selector:
+    name: nyc
+  ports:
+   - port: 9292
+     targetPort: 9292
+---
 apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
