--- a/k8s/tokyo-deployment.yml
+++ b/k8s/tokyo-deployment.yml
@@ -1,3 +1,16 @@
+apiVersion: v1
+kind: Service
+metadata:
+  name: tokyo
+  labels:
+    name: tokyo
+spec:
+  selector:
+    name: tokyo
+  ports:
+   - port: 3000
+     targetPort: 3000
+---
 apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
